force-app/main/default/objects/vlocity_cmt__OpportunityDiscountPricing__c/fields/vlocity_cmt__Amount__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>