force-app/main/default/objects/vlocity_cmt__OpportunityDiscountPricing__c/fields/vlocity_cmt__OpportunityDiscountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__OpportunityDiscountId__c</fullName>
    <label>Opportunity Discount</label>
    <referenceTo>vlocity_cmt__OpportunityDiscount__c</referenceTo>
    <relationshipLabel>Opportunity Discount Pricing</relationshipLabel>
    <relationshipName>OpportunityDiscountPricing</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>