force-app/main/default/objects/vlocity_cmt__OpportunityDiscountPricing__c/fields/vlocity_cmt__PricingVariableId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PricingVariableId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Variable</label>
    <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
    <relationshipLabel>Opportunity Discount Pricing</relationshipLabel>
    <relationshipName>OpportunityDiscountPricing</relationshipName>
    <type>Lookup</type>
</CustomField>